# Pyrax

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  PLAN.md  README.md  drizzle.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
api/: index.ts  package.json  version.ts
api/auth/: [...all].ts
api/version/: route.ts
auth-rs/: Cargo.toml
backend/api/: index.ts
backend/api/utils/: cors.ts
backend/api/version/: route.ts
db/: schema.ts
frontend/: package.json  vite.config.ts
frontend/api/: index.ts
frontend/src/: main.tsx
frontend/src/app/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/components/: DashboardLayout.tsx  LoadingPage.tsx  NotFound.tsx  Typography.tsx
frontend/src/constants/: config.ts
frontend/src/home/: page.tsx
functions/: version.ts
lib/: auth-client.ts  auth.ts
migrations/: 0000_whole_shen.sql  0002_loose_sphinx.sql  0003_purple_hulk.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
src/: App.tsx  main.tsx  styles.css
src/api/: version.ts
src/app/: page.tsx
src/app/auth/: page.tsx
src/app/products/: page.tsx
src/app/servers/: page.tsx
src/components/: Button.tsx  Card.tsx  DashboardLayout.tsx  DashboardSidebar.tsx  Dropdown.tsx  Input.tsx  NotFound.tsx  ProtectedRoute.tsx  ThemeSwitcher.tsx  ThemeToggle.tsx  Typography.tsx
src/constants/: config.ts  domains.ts  navItems.ts
src/home/: page.tsx
src/pages/app/: Index.tsx
src/pages/home/: Home.tsx
src/utils/: theme.ts
